--- a/src/info801/tp/gui/CreateRFP.form
+++ b/src/info801/tp/gui/CreateRFP.form
@@ -58,14 +58,6 @@
               <text value="Temps de production (en jours) : "/>
             </properties>
           </component>
-          <component id="34fba" class="javax.swing.JTextField" binding="txtQuantity">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="bc4b0" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -89,6 +81,14 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="85fd" class="javax.swing.JLabel" binding="lblQuantity">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Label"/>
+            </properties>
           </component>
         </children>
       </grid>
