--- a/src/info801/tp/gui/SupplierAgentGUI.form
+++ b/src/info801/tp/gui/SupplierAgentGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="info801.tp.gui.LogisticAgentGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="info801.tp.gui.SupplierAgentGUI">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <tabbedpane id="96d14" binding="tabbedPane">
+      <tabbedpane id="71d91" binding="tabbedPane">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
@@ -17,24 +17,22 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="7262e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="43a9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Besoins des clients"/>
+              <tabbedpane title="Demandes en cours"/>
             </constraints>
-            <properties>
-              <toolTipText value=""/>
-            </properties>
+            <properties/>
             <border type="none"/>
             <children>
-              <scrollpane id="c26b8">
+              <scrollpane id="c1021">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="9258e" class="javax.swing.JTable" binding="needsTable">
+                  <component id="862e0" class="javax.swing.JTable" binding="materialNeedsDoingTable">
                     <constraints/>
                     <properties/>
                   </component>
@@ -42,22 +40,22 @@
               </scrollpane>
             </children>
           </grid>
-          <grid id="cc760" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="7778e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Contre-propositions"/>
+              <tabbedpane title="Terminées"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <scrollpane id="3db2f">
+              <scrollpane id="ac56c">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="f7837" class="javax.swing.JTable" binding="counterProposalsTable">
+                  <component id="5c7f3" class="javax.swing.JTable" binding="materialNeedsDoneTable">
                     <constraints/>
                     <properties/>
                   </component>
